Added test case to verify bug no longer exists
* Test case tries updating a service's configuration before
  the bundle which publishes the service is installed and
  started.

  Currently it fails. When the service is registered, it should
  have the configuration that was set before the bundle was
  installed and started

Signed-off-by: The MathWorks, Inc. <alchrist@mathworks.com>

--- a/compendium/test_bundles/CMakeLists.txt
+++ b/compendium/test_bundles/CMakeLists.txt
@@ -45,6 +45,7 @@ add_subdirectory(TestBundleDSCA16)
 add_subdirectory(TestBundleDSCA20)
 add_subdirectory(TestBundleDSCA24)
 add_subdirectory(TestBundleDSCA26)
+add_subdirectory(TestBundleDSCA27)
 add_subdirectory(TestBundleDSDependent)
 add_subdirectory(TestBundleDSDependentNoInject)
 add_subdirectory(TestBundleDSDependentOptional)
